Redesign Home screen (Mobile & desktop) (#39)
* ✨ Add Explanation notif on Home page

* 💄 Try fitting content in small screen

* 💄 Fix UI

* 🎨 Display Explanation after all images loaded

* ✨ Only display Explanation once per day

* 💄 Redesign Home Desktop

* 💄 Clean up Home layout desktop

* 📱 Fix mobile

* 📱 Fix small mobile

* 🖥️ Fix desktop

* 🚧 WIP mobile animation

* 📱 Improve animation

* 💄 Add undercover arrows

* ✨ Add Footer to Home

* 📝 Update meta data

* 🎨 Refactor: separate Home versions into Desktop vs Mobile

* 🎨 Simplify HomeMobile, make Quiz swipable

* 🔥 Remove useless CSS

* ✨ Make Learn swipable !

* 💄 Arrow in absolute

* 🚧 WIP

* ✨ Add redirection

* 🐛 Improve touch

* 🐛 Forgot a variable

* 🎨 Refactor

* 💩 Remove file that should not have been committed

* 🎨 Refactoring in progress

* 🎨 Refactor

* 💄 Crop hero image

* 🎨 Animate desktop version too

* 🔊 Add logs

* 🔇 Remove logs

* 🐛 Fix CreatureCard in Learn mobile

--- a/src/components/Home/Home.module.scss
+++ b/src/components/Home/Home.module.scss
@@ -1,21 +1,8 @@
 div.home {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100dvh;
-    > div.options-container {
-        margin: auto;
-        height: 80vh;
-        width: 80%;
-        display: flex;
-    }
 }
 
 @media screen and (max-width: 768px) {
     div.home {
-        > div.options-container {
-            flex-direction: column;
-        }
     }
 }
 
@@ -24,7 +11,10 @@ div.home {
     @media not all and (min-resolution: 0.001dpcm) {
         @supports (-webkit-hyphens: none) {
             div.home {
-                height: 100vh;
+                min-height: 100vh;
+                > div.options-container {
+                    height: 100vh;
+                }
             }
         }
     }
