--- a/src/components/Home/HomeOption.module.scss
+++ b/src/components/Home/HomeOption.module.scss
@@ -2,42 +2,64 @@
 
 a.home-option {
     flex: 1;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 24px;
-    text-transform: uppercase;
-    font-size: var(--font-size-xxlarge);
-    &:first-child {
-        border: solid 2px var(--color-medium-grey);
-        border-right: none;
-        border-radius: 16px 0 0 16px;
+    width: 80%;
+    max-width: 500px;
+    padding: 24px;
+    box-sizing: border-box;
+    border: solid 2px var(--color-logo-light);
+    border-radius: 30% 30% 0 0;
+    border-bottom: none;
+    background-color: var(--bg);
+    > h2 {
+        text-transform: uppercase;
+        font-size: var(--font-size-xxlarge);
+        margin-block: 0;
+        margin-block-end: 24px;
     }
-    &:nth-child(2) {
-        background-color: var(--color-medium-grey);
-        border-radius: 0 16px 16px 0;
+    > p {
+        margin-block: 0;
+        margin-block-end: 24px;
+        font-size: var(--font-size-xlarge);
+    }
+    &.secondary {
+        background-color: var(--color-logo-light);
+        border-radius: 0 0 30% 30%;
     }
     div.image-container {
         @include background-image-component;
         background-color: transparent;
         width: 50%;
         height: 30vh;
+        margin: auto;
+        margin-bottom: 48px;
+    }
+    div.expandable {
+        transition: height 0.4s ease-in-out;
     }
 }
 
 @media screen and (max-width: 768px) {
     a.home-option {
-        &:first-child {
-            border-right: solid 2px var(--color-medium-grey);
-            border-bottom: none;
-            border-radius: 16px 16px 0 0;
+        padding: 12px;
+        width: unset;
+        max-width: 80vw;
+        border: solid 2px var(--color-logo-light);
+        border-left: none;
+        border-radius: 0 30% 30% 0;
+        > h2 {
+            font-size: var(--font-size-xlarge);
+            margin-block-end: 12px;
         }
-        &:nth-child(2) {
-            border-radius: 0 0 16px 16px;
+        > p {
+            font-size: var(--font-size-large);
+            margin-block-end: 12px;
         }
         div.image-container {
-            height: 20vh;
+            margin-bottom: 4px;
+            height: 14vh;
+        }
+        &.secondary {
+            border-radius: 30% 0 0 30%;
         }
     }
 }
