--- a/src/mixins.scss
+++ b/src/mixins.scss
@@ -17,13 +17,13 @@
 }
 
 @mixin button {
-    background-color: var(--bg);
+    background-color: var(--fg);
+    color: var(--bg);
     border-radius: 12px;
     box-shadow:
         transparent 0 0 0 3px,
         rgba(18, 18, 18, 0.1) 0 6px 16px;
     box-sizing: border-box;
-    color: var(--fg);
     display: inline-flex;
     padding: 16px 20px;
     text-align: center;
