💄 Fix Close Button UI

--- a/src/components/Learn/Details/AvatarDetails.module.scss
+++ b/src/components/Learn/Details/AvatarDetails.module.scss
@@ -14,6 +14,9 @@ div.avatar-details {
             position: absolute;
             right: 6px;
             top: 12px;
+            background: none;
+            outline: none;
+            border: none;
         }
     }
 }
